--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>sasaabdelillah</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="device">
 </head>
 <body>
     <div id="form-main">
